pl - Fixed Absolute URLs

--- a/pl/gis/000.pl.md
+++ b/pl/gis/000.pl.md
@@ -27,12 +27,10 @@ Model S-57 definiuje informacje hydrograficzne za pomocą kombinacji cech opisow
 
 ### S-57 Funkcje i atrybuty
 
-Pojedynczy plik S-57 może zawierać ponad 100 warstw. Obiekty w pliku S-57 są przypisywane do warstwy na podstawie nazwy klasy obiektu (OBJL). Każdy typ elementu w pliku S-57 ma predefiniowany zestaw atrybutów, zgodnie z definicją w standardzie S-57. Są to krótkie nazwy, które można powiązać z dłuższymi, bardziej znaczącymi nazwami za pomocą [katalogu obiektów/atrybutów S-57](http://www.s-57.com).
+Pojedynczy plik S-57 może zawierać ponad 100 warstw. Obiekty w pliku S-57 są przypisywane do warstwy na podstawie nazwy klasy obiektu (OBJL). Każdy typ elementu w pliku S-57 ma predefiniowany zestaw atrybutów, zgodnie z definicją w standardzie S-57. Są to krótkie nazwy, które można powiązać z dłuższymi, bardziej znaczącymi nazwami za pomocą katalogu obiektów/atrybutów S-57.
 
 Na przykład klasa obiektu lotnisko (AIRARE) może mieć atrybuty AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT i SORIND. Bardziej znaczące nazwy tych krótkich nazw można znaleźć w dokumencie S-57 lub katalogu obiektów/atrybutów S-57.
 
 ## Bibliografia
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [Katalog obiektów i atrybutów S57](http://www.s-57.com)
-
