sv - Fixed Absolute URLs

--- a/sv/gis/000.sv.md
+++ b/sv/gis/000.sv.md
@@ -27,12 +27,10 @@ S-57-modellen definierar hydrografisk information med hjälp av en kombination a
 
 ### S-57 funktioner och attribut
 
-En enda S-57-fil kan innehålla fler än 100 lager. Funktioner i en S-57-fil tilldelas ett lager baserat på namnet på objektklassen (OBJL). Varje funktionstyp i en S-57-fil har en fördefinierad uppsättning attribut som definieras av S-57-standarden. Dessa är korta namn som kan relateras till längre, mer meningsfulla namn med hjälp av [S-57 objekt/attributkatalog](http://www.s-57.com).
+En enda S-57-fil kan innehålla fler än 100 lager. Funktioner i en S-57-fil tilldelas ett lager baserat på namnet på objektklassen (OBJL). Varje funktionstyp i en S-57-fil har en fördefinierad uppsättning attribut som definieras av S-57-standarden. Dessa är korta namn som kan relateras till längre, mer meningsfulla namn med hjälp av S-57 objekt/attributkatalog.
 
 Till exempel kan objektklassen flygplats (AIRARE) ha attributen AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT och SORIND. De mer meningsfulla namnen på dessa korta namn finns i S-57-dokumentet eller S-57-objekt-/attributkatalogen.
 
 ## Referenser
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 Objects and Attributes Catalog](http://www.s-57.com)
-
