tr - Fixed Relative URLs

--- a/tr/misc/h4.tr.md
+++ b/tr/misc/h4.tr.md
@@ -39,7 +39,7 @@ HDF4 veya H4 dosyası, heterojen veri nesnelerinden oluşan bir kap gibidir. H4 
 * Tablolar
 * Metin öğeleri
 * Grafikler
-* [PDF](/tr/pdf/) ve [Excel belgeleri](/tr/elektronik tablo/) gibi belgeler
+* [PDF](/tr/pdf/) ve [Excel belgeleri](/tr/spreadsheet/) gibi belgeler
 
 ## H4 Dosya Görüntüleyici
 
