th - Fixed Absolute URLs

--- a/th/gis/000.th.md
+++ b/th/gis/000.th.md
@@ -27,12 +27,10 @@
 
 ### คุณลักษณะและคุณสมบัติของ S-57
 
-ไฟล์ S-57 ไฟล์เดียวอาจมีมากกว่า 100 เลเยอร์ คุณสมบัติในไฟล์ S-57 ถูกกำหนดให้กับเลเยอร์ตามชื่อของคลาสวัตถุ (OBJL) คุณลักษณะแต่ละประเภทในไฟล์ S-57 มีชุดคุณลักษณะที่กำหนดไว้ล่วงหน้าตามที่กำหนดโดยมาตรฐาน S-57 ชื่อเหล่านี้เป็นชื่อสั้นๆ ที่สามารถเชื่อมโยงกับชื่อที่ยาวกว่าและมีความหมายมากกว่าได้โดยใช้ [แคตตาล็อกวัตถุ/แอตทริบิวต์ S-57](http://www.s-57.com)
+ไฟล์ S-57 ไฟล์เดียวอาจมีมากกว่า 100 เลเยอร์ คุณสมบัติในไฟล์ S-57 ถูกกำหนดให้กับเลเยอร์ตามชื่อของคลาสวัตถุ (OBJL) คุณลักษณะแต่ละประเภทในไฟล์ S-57 มีชุดคุณลักษณะที่กำหนดไว้ล่วงหน้าตามที่กำหนดโดยมาตรฐาน S-57 ชื่อเหล่านี้เป็นชื่อสั้นๆ ที่สามารถเชื่อมโยงกับชื่อที่ยาวกว่าและมีความหมายมากกว่าได้โดยใช้ แคตตาล็อกวัตถุ/แอตทริบิวต์ S-57
 
 ตัวอย่างเช่น คลาสอ็อบเจ็กต์สนามบิน (AIRARE) สามารถมีแอตทริบิวต์ AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT และ SORIND ชื่อที่มีความหมายมากขึ้นของชื่อย่อเหล่านี้สามารถพบได้ในเอกสาร S-57 หรือแค็ตตาล็อกวัตถุ/แอตทริบิวต์ S-57
 
 ## อ้างอิง
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 วัตถุและแคตตาล็อกแอตทริบิวต์](http://www.s-57.com)
-
