tr - Fixed Absolute URLs

--- a/tr/gis/000.tr.md
+++ b/tr/gis/000.tr.md
@@ -27,12 +27,10 @@ S-57 modeli, tanımlayıcı ve mekansal özelliklerin bir kombinasyonunu kullana
 
 ### S-57 Özellikleri ve Özellikleri
 
-Tek bir S-57 dosyası 100'den fazla katman içerebilir. Bir S-57 dosyasındaki özellikler, nesne sınıfının (OBJL) adına göre bir katmana atanır. Bir S-57 dosyasındaki her bir özellik tipi, S-57 standardında tanımlandığı gibi önceden tanımlanmış bir dizi özniteliğe sahiptir. Bunlar, [S-57 nesne/öznitelik kataloğu](http://www.s-57.com) kullanılarak daha uzun, daha anlamlı adlarla ilişkilendirilebilen kısa adlardır.
+Tek bir S-57 dosyası 100'den fazla katman içerebilir. Bir S-57 dosyasındaki özellikler, nesne sınıfının (OBJL) adına göre bir katmana atanır. Bir S-57 dosyasındaki her bir özellik tipi, S-57 standardında tanımlandığı gibi önceden tanımlanmış bir dizi özniteliğe sahiptir. Bunlar, S-57 nesne/öznitelik kataloğu kullanılarak daha uzun, daha anlamlı adlarla ilişkilendirilebilen kısa adlardır.
 
 Örneğin, havaalanı (AIRARE) nesne sınıfı AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT ve SORIND özniteliklerine sahip olabilir. Bu kısa isimlerin daha anlamlı isimleri S-57 belgesinde veya S-57 nesne/öznitelik kataloğunda bulunabilir.
 
 ## Referanslar
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 Nesneleri ve Nitelikleri Kataloğu](http://www.s-57.com)
-
