uk - Fixed Absolute URLs

--- a/uk/gis/000.uk.md
+++ b/uk/gis/000.uk.md
@@ -27,11 +27,10 @@
 
 ### S-57 Функції та атрибути
 
-Один файл S-57 може містити більше 100 шарів. Функції у файлі S-57 призначаються шару на основі імені класу об’єктів (OBJL). Кожен тип функції у файлі S-57 має попередньо визначений набір атрибутів, як визначено стандартом S-57. Це короткі імена, які можна пов’язати з довшими, більш значущими іменами за допомогою [каталогу об’єктів/атрибутів S-57](http://www.s-57.com).
+Один файл S-57 може містити більше 100 шарів. Функції у файлі S-57 призначаються шару на основі імені класу об’єктів (OBJL). Кожен тип функції у файлі S-57 має попередньо визначений набір атрибутів, як визначено стандартом S-57. Це короткі імена, які можна пов’язати з довшими, більш значущими іменами за допомогою каталогу об’єктів/атрибутів S-57.
 
 Наприклад, клас об’єктів аеропорту (AIRARE) може мати атрибути AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT і SORIND. Більш змістовні назви цих коротких назв можна знайти в документі S-57 або каталозі об’єктів/атрибутів S-57.
 
 ## Список літератури
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [Каталог об’єктів і атрибутів S57](http://www.s-57.com)
