vi - Fixed Absolute URLs

--- a/vi/gis/000.vi.md
+++ b/vi/gis/000.vi.md
@@ -27,12 +27,10 @@ Mô hình S-57 xác định thông tin thủy văn bằng cách sử dụng kế
 
 ### Các tính năng và thuộc tính của S-57
 
-Một tệp S-57 có thể chứa hơn 100 lớp. Các tính năng trong tệp S-57 được gán cho một lớp dựa trên tên của lớp đối tượng (OBJL). Mỗi loại tính năng trong tệp S-57 có một bộ thuộc tính được xác định trước theo tiêu chuẩn S-57. Đây là những tên ngắn có thể liên quan đến những tên dài hơn, có ý nghĩa hơn bằng cách sử dụng [danh mục đối tượng/thuộc tính S-57](http://www.s-57.com).
+Một tệp S-57 có thể chứa hơn 100 lớp. Các tính năng trong tệp S-57 được gán cho một lớp dựa trên tên của lớp đối tượng (OBJL). Mỗi loại tính năng trong tệp S-57 có một bộ thuộc tính được xác định trước theo tiêu chuẩn S-57. Đây là những tên ngắn có thể liên quan đến những tên dài hơn, có ý nghĩa hơn bằng cách sử dụng danh mục đối tượng/thuộc tính S-57.
 
 Ví dụ, lớp đối tượng sân bay (AIRARE) có thể có các thuộc tính AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT, và SORIND. Tên có ý nghĩa hơn của những tên ngắn này có thể được tìm thấy trong tài liệu S-57 hoặc danh mục thuộc tính/đối tượng S-57.
 
 ## Người giới thiệu
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [Danh mục đối tượng và thuộc tính S57](http://www.s-57.com)
-
